# CXX_CodeExampl_CMakeExmpl

./: README.md
Binary_vector_generator/: Readme.txt  Vector_generator.cpp
CMakeSubmodulesRunTest/: CMakeLists.txt  Readme.txt.txt
CMakeSubmodulesRunTest/src/: main.cpp
CMakeSubmodulesRunTest/test1/: CMakeLists.txt  test1.cpp
CMakeUserStaticLib/: CMakeLists.txt  Readme.txt.txt
CMakeUserStaticLib/include/: dif.h
CMakeUserStaticLib/lib/: CMakeLists.txt  fun.cpp
CMakeUserStaticLib/lib/inc/: fun.h
CMakeUserStaticLib/src/: dif.cpp  main.cpp
Calculating_number_of_vectors_with_particular_weight/: Caution.txt  VectorWeights.cpp
CmakeListsExmls/: CMakeListseExmpl1.txt  CMakeListseExmpl2.txt
ConnectingUserLib/: CMakeLists.txt  Readme.txt.txt  main.cpp
ConnectingUserLib/mylib/: Makefile  cmake_install.cmake
DataStructures/Recursion/: Fibonacci.cpp  Series.cpp
Gtest/: CMakeLists.txt  README.txt  TODO.txt  fun.cpp  fun.h  main.cpp
Gtest/tests/: CMakeLists.txt  fun_test.cpp  fun_test1.cpp
Gtest/tests/testdata/test1/: data.txt
OneThreadExmpl/OutConsoleThread/: logging_thread.cpp  logging_thread.h  main.cpp  numbers.cpp  numbers.h
Polymorphism/: references_polymorph.cpp  static_polumorphism.cpp
ReadWriteOutput/: Boolean_xor.cpp  ConsoleOutFormat.cpp  Lol.txt  Makefile.win  OutputFormatting.dev  Read_files.cpp  Type_conversion.cpp  Write_files.cpp
Some_basic_features_of_Cpp_language/: Readme.txt
Some_basic_features_of_Cpp_language/Classes_Hierarchy_Polymorphism/: Animal.cpp  Area.cpp  Mark.cpp  Max.cpp  Message.cpp  a.out
Some_basic_features_of_Cpp_language/Conditionals/: Calc.cpp  a.out
Some_basic_features_of_Cpp_language/DataTypes/: Int_operations.cpp  a.out  short.cpp
Some_basic_features_of_Cpp_language/Loops/: Fibonacci.cpp  Pyramid.cpp  Table.cpp  a.out
Some_basic_features_of_Cpp_language/Math_operator_precedence/: Math.cpp  a.out
Some_basic_features_of_Cpp_language/Pointers_References_Arrays/: 2dim_dynamic_array.cpp  Account.cpp  Pascal.cpp  PointersMultidarrComparis.cpp  Pointers_to_static_arrays.cpp  Sort_using_ pointer_to_a_static_array.cpp  Sort_using_static_arrays.cpp  Two_dim_array.cpp  a.out  matrix.cpp
Some_basic_features_of_Cpp_language/Strings/: Adress.txt  a.out
Some_basic_features_of_Cpp_language/Template_Class_Types/: Complex.cpp  Max.cpp  Smallest.cpp  Swap.cpp  Template.cpp  a.out
Some_basic_features_of_Cpp_language/Template_Class_Types/Sorting_array_in_ascending_order/: Index_of_smallest_module.cpp  Main.cpp  Swap_elements_module.cpp  a.out
Some_basic_features_of_Cpp_language/Terminal_output/: Hello.cpp  Hello.out  a.out  new 1.cc
Some_basic_features_of_Cpp_language/UseOfFunctions/: Check.cpp  Cube.cpp  DigitSum.cpp  Fib.cpp  Smallest.cpp  a.out
WaysOfBuildingProject/: CMakeEclipseBuildSystem.txt  CMakeLists.txt  CMakeMakeBuildSystem.txt  CompileLinkGCC.txt
WaysOfBuildingProject/include/: friend.h  merge_names.h
WaysOfBuildingProject/src/: friend.cpp  main.cpp  main.cpp.bak  merge_names.cpp
bitwise_OR_fun_params/: bitwise_or_fun_params.cpp
parsers/: HRML-parser.cpp  calculator-parser.cpp  data.xml  xml_parser.cpp
sideEffectsofFunction/: main.cpp
template-metaprogramming/: template-metaprogramming.cpp
twoChildsFromTemplateClasss/: main.cpp  print.cpp  print.h
